--- a/TASK_2.ipynb
+++ b/TASK_2.ipynb
@@ -145,10 +145,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already satisfied: sounddevice in c:\\users\\rachi\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (0.5.0)Note: you may need to restart the kernel to use updated packages.\n",
-      "\n",
-      "Requirement already satisfied: CFFI>=1.0 in c:\\users\\rachi\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from sounddevice) (1.16.0)\n",
-      "Requirement already satisfied: pycparser in c:\\users\\rachi\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from CFFI>=1.0->sounddevice) (2.21)\n"
+      "Requirement already satisfied: sounddevice in c:\\users\\rachi\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (0.5.0)Note: you may need to restart the kernel to use updated packages.\n"
      ]
     },
     {
@@ -158,6 +155,15 @@
       "\n",
       "[notice] A new release of pip is available: 24.0 -> 24.2\n",
       "[notice] To update, run: C:\\Users\\rachi\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.11_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Requirement already satisfied: CFFI>=1.0 in c:\\users\\rachi\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from sounddevice) (1.16.0)\n",
+      "Requirement already satisfied: pycparser in c:\\users\\rachi\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.11_qbz5n2kfra8p0\\localcache\\local-packages\\python311\\site-packages (from CFFI>=1.0->sounddevice) (2.21)\n"
      ]
     }
    ],
@@ -188,7 +194,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\rachi\\AppData\\Local\\Temp\\ipykernel_10704\\628830549.py:2: WavFileWarning: Chunk (non-data) not understood, skipping it.\n",
+      "C:\\Users\\rachi\\AppData\\Local\\Temp\\ipykernel_8504\\2685827172.py:1: WavFileWarning: Chunk (non-data) not understood, skipping it.\n",
       "  samplerate, data = wavfile.read('file_example_WAV_1MG.wav')\n"
      ]
     }
@@ -262,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
